[GTK] WebKitWebView does a lot of work during size_allocate when not mapped https://bugs.webkit.org/show_bug.cgi?id=77743

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-02-06
Reviewed by Gustavo Noronha Silva.

Instead of resizing the guts of a WebView when it's not mapped, wait
until it's mapped and do one resize. This prevents unmapped WebViews
from adding to a container's resize cost.

Source/WebKit/gtk:

* webkit/webkitwebview.cpp:
(resizeWebViewFromAllocation): Abstracted out this helper.
(webkit_web_view_size_allocate): Wait until map to resize umapped widgets.
(webkitWebViewMap): Added this vmethod implementation.
(webkit_web_view_class_init): Added vmethod.
* webkit/webkitwebviewprivate.h: Added new needsResizeOnMap member.

Source/WebKit2:

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(_WebKitWebViewBasePrivate): Added a new member needsResizeOnMap.
(resizeWebKitWebViewBaseFromAllocation): Abstracted out this helper.
(webkitWebViewBaseSizeAllocate): Wait until map to resize unmapped WebViews.
(webkitWebViewBaseMap): Added this vmethod implementation.
(webkit_web_view_base_class_init): Added vmethod.

Canonical link: https://commits.webkit.org/94749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106816 268f45cc-cd09-0410-ab3c-d52691b4dbfc